--- a/index.html
+++ b/index.html
@@ -58,7 +58,30 @@
     <div class="container">
         <h3>Your projects</h3>
         <div class="projects">
-            
+          <div>
+            <h4>Project A</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt repellat molestiae officia saepe voluptates recusandae quaerat quae laborum nobis.</p>
+          </div>
+          <div>
+            <h4>Project B</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quidem est ea consequatur labore inventore, deserunt minima illo nam quam aperiam nostrum obcaecati magni molestiae!</p>
+          </div>
+          <div>
+            <h4>App for Kids</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus eum vitae esse labore et dolores!</p>
+          </div>
+           <div>
+            <h4>Complex App for Engineers</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, rem! Alias possimus quisquam quos cumque laborum exercitationem itaque, provident accusantium, eligendi natus hic error, qui officiis rerum corrupti accusamus tempore.</p>
+          </div>
+            <div>
+              <h4>Ad Blocker</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus earum accusantium veritatis eum suscipit. Aliquid ratione nostrum porro reprehenderit autem?</p>
+            </div>
+            <div>
+              <h4>Poker Game</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, fuga.</p>
+            </div>
         </div>
     </div>
 
