Add style to search

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <div class="icons">
-        <input type="search">
+        <input type="search" id="search">
         <i class="fa fa-user-circle"></i>
         <i class="fa fa-tasks"></i>
         <h3>Virgil Lungu</h3>
