add header button css

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
     <header>
       <div class="icons">
+        <h3>Virgil Lungu</h3>
         <input type="search" id="search">
         <i class="fa fa-user-circle"></i>
         <i class="fa fa-tasks"></i>
-        <h3>Virgil Lungu</h3>
       </div>
 
       <div class="welcome">
+        <div>
         <i class="fa fa-play fa-3x"></i>
         <h3>Hi there, Virgil.</h3>
+        </div>
+        <div class="button">
         <button>New</button>
         <button>Upload</button>
         <button>Share</button>
+        </div>
       </div>
     </header>
 
