Change settings CSS and add margin vs dashboard

--- a/index.html
+++ b/index.html
@@ -37,18 +37,30 @@
         </div>
 
         <div class="preferences">
+          <div>
             <i class="fa fa-home"></i>
             <h4>Home</h4>
+          </div>
+          <div>
             <i class="fa fa-user"></i>
             <h4>Profile</h4>
+          </div>
+          <div>
             <i class="fa fa-newspaper"></i>
             <h4>Messages</h4>
+          </div>
+          <div>
             <i class="fa fa-store"></i>
             <h4>Store</h4>
+          </div>
+          <div>
             <i class="fa fa-history"></i>
             <h4>History</h4>
+          </div>
+          <div>
             <i class="fa fa-file-export"></i>
             <h4>Download as CSV</h4>
+          </div>
         </div>
 
         <div class="settings">
