Add sidebar settings css

--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
         </div>
 
         <div class="settings">
+          <div>
             <i class="fa fa-list-ul"></i>
             <h4>Settings</h4>
+          </div>
+          <div> 
             <i class="fa fa-address-card"></i>
             <h4>Privacy</h4>
+          </div> 
         </div>
     </div>
 
