--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div> 
         </div>
     </div>
-
+    <main>
     <div class="container">
         <h3>Your projects</h3>
         <div class="projects">
@@ -104,6 +104,6 @@
             </div>
         </div>
     </div>
-
+   </main>
 </body>
 </html>
