Add like and share icons

--- a/index.html
+++ b/index.html
@@ -81,26 +81,50 @@
           <div>
             <h4>Project A</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt repellat molestiae officia saepe voluptates recusandae quaerat quae laborum nobis.</p>
+            <div class="likeshare">
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-share"></i>
+              </div>
           </div>
           <div>
             <h4>Project B</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quidem est ea consequatur labore inventore, deserunt minima illo nam quam aperiam nostrum obcaecati magni molestiae!</p>
+            <div class="likeshare">
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-share"></i>
+              </div>
           </div>
           <div>
             <h4>App for Kids</h4>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus eum vitae esse labore et dolores!</p>
+            <div class="likeshare">
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-share"></i>
+              </div>
           </div>
            <div>
             <h4>Complex App for Engineers</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, rem! Alias possimus quisquam quos cumque laborum exercitationem itaque, provident accusantium, eligendi natus hic error, qui officiis rerum corrupti accusamus tempore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, illo!</p>
+            <div class="likeshare">
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-share"></i>
+              </div>
           </div>
             <div>
               <h4>Ad Blocker</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus earum accusantium veritatis eum suscipit. Aliquid ratione nostrum porro reprehenderit autem?</p>
+              <div class="likeshare">
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-share"></i>
+                </div>
             </div>
             <div>
               <h4>Poker Game</h4>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, fuga.</p>
+              <div class="likeshare">
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-share"></i>
+                </div>
             </div>
         </div>
     </div>
