Add trending and announcements containers

--- a/index.html
+++ b/index.html
@@ -128,6 +128,36 @@
             </div>
         </div>
     </div>
+    <div class="announcements">
+      <h3>Announcements</h3>
+      <div class="announce-container">
+        <div class="maintenance">
+          <h4>Site maintenance</h4>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nobis ut dicta eveniet dolorem ipsum, amet doloremque nam accusantium sed?
+        </div>
+        <div class="community">
+          <h4>Community</h4>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius perspiciatis autem architecto temporibus numquam quas?
+        </div>
+        <div class="privacy">
+          <h4>Privacy</h4>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, molestiae.
+        </div>
+      </div>
+    </div>
+    <div class="trending">
+      <h3>Trending</h3>
+      <div class="trending-container">
+        <div class="virgil">
+          <h4>@virgil</h4>
+          Lorem ipsum dolor sit amet.
+        </div>
+        <div class="razvan">
+          <h4>@razvan</h4>
+          Lorem ipsum dolor sit.
+        </div>
+      </div>
+    </div>
    </main>
 </body>
 </html>
